--- a/CalculationProject/CalculationProject/MainWindow.xaml
+++ b/CalculationProject/CalculationProject/MainWindow.xaml
@@ -7,6 +7,12 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid HorizontalAlignment="Left" Height="400" Margin="10,10,0,0" VerticalAlignment="Top" Width="772">
+            <TextBox HorizontalAlignment="Left" Height="109" Margin="10,10,0,0" TextWrapping="Wrap" Text="{Binding Path=X}" VerticalAlignment="Top" Width="273"/>
+            <TextBox HorizontalAlignment="Left" Height="109" Margin="10,281,0,0" TextWrapping="Wrap" Text="{Binding Path=Y}" VerticalAlignment="Top" Width="273"/>
+            <TextBox HorizontalAlignment="Left" Height="109" Margin="385,139,0,0" TextWrapping="Wrap" Text="{Binding Path=Z, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="273"/>
+            <Button Command="{Binding _addCommand}" Content="加算する" HorizontalAlignment="Left" Margin="385,88,0,0" VerticalAlignment="Top" Width="273" Height="31"/>
+        </Grid>
+
     </Grid>
 </Window>
